# ABtest

./: README.md  environment.yml  example.ipynb  requirements.txt  setup.cfg
.github/workflows/: deployments.yml
src/abtests/: bernoulli_trials.py
