[metadata]
name = abtests-nicorodc
version = 0.0.3
author = Nicolás Agustín Rodriguez Castro
author_email = nicorodc@gmail.com
description = AB testing simplified
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/taurusongithub/ABtest
project_urls =
    Bug Tracker = https://github.com/taurusongithub/ABtest/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.5.4

[options.packages.find]
where = src